--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.38",
-		"@nextui-org/card": "^2.0.34",
+		"@nextui-org/card": "^2.2.3",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/image": "^2.0.32",
 		"@nextui-org/input": "2.2.5",
@@ -21,12 +21,12 @@
 		"@nextui-org/react": "^2.4.8",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "2.2.6",
-		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/system": "^2.4.3",
+		"@nextui-org/theme": "^2.4.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "^11.13.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
