--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"clsx": "2.1.1",
 		"framer-motion": "^11.13.1",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
